<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textSize="16sp"
        android:textColor="#e5a06f"
        android:layout_marginTop="@dimen/small"
        android:layout_marginBottom="@dimen/normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:paddingTop="@dimen/small"
            android:paddingBottom="@dimen/small"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:paddingTop="@dimen/small"
            android:layout_marginBottom="@dimen/normal"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce"
        android:textSize="16sp"
        android:textColor="#e5a06f"
        android:layout_marginTop="@dimen/large"
        android:layout_marginBottom="@dimen/normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce_about_wiki"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingBottom="@dimen/normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_services"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/normal"
            android:paddingBottom="@dimen/normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/normal"/>
    </LinearLayout>

</LinearLayout>