<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/large"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#425062"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.FontArsenalBold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/large"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small"
            android:layout_marginEnd="@dimen/normal"
            android:layout_marginStart="@dimen/normal"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/email"
            android:maxLines="1"
            android:minHeight="40dp"
            android:paddingEnd="@dimen/large"
            android:paddingStart="@dimen/large"
            android:textColorHint="#9fb0c5"
            android:textAppearance="@style/TextAppearance.FontArsenalRegular"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal"
            android:layout_marginStart="@dimen/normal"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/password"
            android:maxLines="1"
            android:minHeight="40dp"
            android:paddingEnd="@dimen/large"
            android:paddingStart="@dimen/large"
            android:textColorHint="#9fb0c5"
            android:textAppearance="@style/TextAppearance.FontArsenalRegular"/>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/normal"
            android:background="@drawable/border_sign_in_button"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.FontArsenalBold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            android:text="@string/forgot_password"
            android:textColor="#9fb0c5"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.FontArsenalBold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal"
            android:background="@drawable/border_sign_in_facebook_button"
            android:gravity="center">

            <View
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="@dimen/small"
                android:layout_marginStart="@dimen/small"
                android:background="@drawable/ic_facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.FontArsenalBold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>